name:                austin-zoning
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable austin-zoning
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-qq
                     , wreq
                     , basic-prelude
                     , lens
                     , lens-aeson
                     , string-conversions
                     , aeson-pretty
                     , exceptions
                     , scotty
                     , vector
